--- a/full-stack.html
+++ b/full-stack.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://kontak.zohorecruit.com/recruit/ViewJob.na?digest=BVTevaSAtqpw9sBX44sJMp.Z.YOmgRbgQOpXfJDnmCE-&amp;embedsource=CareerSite'>Full Stack Developer Senior (MKT269)(M)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kontak.zohorecruit.com/recruit/ViewJob.na?digest=BVTevaSAtqpw9sBX44sJMp.Z.YOmgRbgQOpXfJDnmCE-&amp;embedsource=CareerSite'>Full Stack Developer Senior (MKT269)(M)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://movinga.join.com/jobs/467504-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
+<h5><a href='https://movinga.join.com/jobs/467504-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -144,7 +144,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://idana.join.com/jobs/471301-senior-fullstack-developer-typescript-m-f-d'>Job @ Tomes (Remote): Senior Fullstack Developer T... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/471301-senior-fullstack-developer-typescript-m-f-d'>Job @ Tomes (Remote): Senior Fullstack Developer T... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -184,7 +184,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/c5f7bkffpe9nfuzhwpy5u3e41o'>Full Stack Programmer II  | Current Openings</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/infotechsourcing/job/c5f7bkffpe9nfuzhwpy5u3e41o'>Full Stack Programmer II  | Current Openings</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CAUnited States  Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -230,7 +230,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://crateio.recruitee.com/o/fullstack-engineer-1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crateio.recruitee.com/o/fullstack-engineer-1'>
       Fullstack Engineer - Crate.io Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -378,7 +378,7 @@
 <p><span class="badge badge-light">Boston, MA, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=ncJRnMwq'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oDGvafwI&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=ncJRnMwq'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -445,7 +445,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/dUKcqFnbgP/Full-Stack-Cloud-Engineer'>Full Stack Cloud Engineer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/dUKcqFnbgP/Full-Stack-Cloud-Engineer'>Full Stack Cloud Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
