--- a/internship.html
+++ b/internship.html
@@ -57,7 +57,7 @@
 <p><span class="badge badge-light">Malaysia  Malaysia Malaysia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Dailymotion/743999698558656-editorial-producer-intern-m-f-'>Dailymotion Editorial Producer - Intern (M/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Dailymotion/743999698558656-editorial-producer-intern-m-f-'>Dailymotion Editorial Producer - Intern (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -207,7 +207,7 @@
 <p><span class="badge badge-light">S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/loft/be2c87c7-6032-4691-9db8-15553fd4c7b2'>Loft - Investor Relations Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/loft/be2c87c7-6032-4691-9db8-15553fd4c7b2'>Loft - Investor Relations Intern</a></h5> 
 <p><span class="badge badge-light">S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -219,7 +219,7 @@
 <p><span class="badge badge-light">Ho Chi Minh Vietnam  Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698543627-intern-air-ocean-customs-transcon-import'>Expeditors Intern - Air/Ocean/Customs/Transcon/ Import | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698543627-intern-air-ocean-customs-transcon-import'>Expeditors Intern - Air/Ocean/Customs/Transcon/ Import | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -327,7 +327,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/undergraduate-it-internship-spring-2020-7144'>Undergraduate IT Internship Spring 2020 - Florida Blue Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bcbsfl.referrals.selectminds.com/jobs/undergraduate-it-internship-spring-2020-7144'>Undergraduate IT Internship Spring 2020 - Florida Blue Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -335,7 +335,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://thestudenthotel.recruitee.com/o/revenue-intern-barcelona'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thestudenthotel.recruitee.com/o/revenue-intern-barcelona'>
       Revenue Intern - The Student Hotel
     </a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
@@ -441,7 +441,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SchoolApply/743999698531111-application-support-internship'>SchoolApply Application Support Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SchoolApply/743999698531111-application-support-internship'>SchoolApply Application Support Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dubai</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
