--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4497253002'>Job Application for Per Diem Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4497253002'>Job Application for Per Diem Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://autismhomesupport.applytojob.com/apply/wRoARIcaax/SpeechLanguage-Pathologist-CCC-PartTime-Contractor'>Speech-Language Pathologist (CCC), Part-Time Contractor - Autism Home Support Services - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://autismhomesupport.applytojob.com/apply/wRoARIcaax/SpeechLanguage-Pathologist-CCC-PartTime-Contractor'>Speech-Language Pathologist (CCC), Part-Time Contractor - Autism Home Support Services - Career Page</a></h5> 
 <p><span class="badge badge-light">Rockford Rockford</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -122,7 +122,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191686-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191686-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-cnf9VE9ECr6AHLaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1191 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-cnf9VE9ECr6AHLaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1191 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -179,7 +179,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/midsouthrehabservices/job/g1meisspc3npja3snkfzs6obuo'>Full-Time | Speech-Language Pathologist | Mid South Rehab Services, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/midsouthrehabservices/job/g1meisspc3npja3snkfzs6obuo'>Full-Time | Speech-Language Pathologist | Mid South Rehab Services, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -191,11 +191,11 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light">Fort Worth, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/osj63fwE'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
+<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/osj63fwE'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
 <p><span class="badge badge-light">Fort Worth, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-d2iR_s8Fqr6zgQaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1186 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/prn-speech-language-pathologist-cobb-or-dekalb-county-d2iR_s8Fqr6zgQaKjNoogA'>PRN Speech Language Pathologist - (Cobb or Dekalb County) #1186 job at MedSide Healthcare in Atlanta, GA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Atlanta, GAAtlanta, GA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -242,7 +242,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light">Cape Girardeau, Missouri</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999687135311-infant-toddler-developmental-therapist-itds'>Hearing and Speech Center of Florida Infant Toddler Developmental Therapist-ITDS | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999687135311-infant-toddler-developmental-therapist-itds'>Hearing and Speech Center of Florida Infant Toddler Developmental Therapist-ITDS | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -337,7 +337,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Newark, DE</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4477191002'>Job Application for Speech Language Pathologist, SLP, Part time at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4477191002'>Job Application for Speech Language Pathologist, SLP, Part time at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Wailuku, HI</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -357,7 +357,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://confluent-health.workable.com/j/2C5F2D4E51'>Confluent Health - Jobs: Speech Language Pathologist | Home Health - Apply online</a></h5> 
+<h5><a href='https://confluent-health.workable.com/j/2C5F2D4E51'>Confluent Health - Jobs: Speech Language Pathologist | Home Health - Apply online</a></h5> 
 <p><span class="badge badge-light">United States  Naples, FL</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -455,7 +455,7 @@ Speech-Pathologist Needed immediately - full time position in Garden City, from 
 <p><span class="badge badge-light">Douglasville, GA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
